# evoeuler

./: .gitignore  README.md  app.py  pyproject.toml
examples/: euler_3sets_congruent_ellipses.py  euler_3sets_congruent_rectangles.py  euler_3sets_ellipses.py  euler_3sets_rectangles.py  symmetric_euler_3sets_congruent_ellipses.py  symmetric_euler_3sets_congruent_rectangles.py  symmetric_venn2_congruent_ellipses.py  symmetric_venn2_congruent_rectangles.py  symmetric_venn3_congruent_ellipses.py  symmetric_venn3_congruent_rectangles.py  venn2_congruent_ellipses.py  venn2_congruent_rectangles.py  venn2_ellipses.py  venn2_rectangles.py  venn3_congruent_ellipses.py  venn3_congruent_rectangles.py  venn3_ellipses.py  venn3_rectangles.py
src/evoeuler/: __init__.py  __main__.py  __version__.py  api.py  config.py  enums.py  optimization.py  result.py  solution.py  utils.py  zone.py
src/evoeuler/gui/: __init__.py  app.py  tabs.py
src/evoeuler/shapes/: __init__.py  creation.py  transforms.py
