[project]
name = "evoeuler"
version = "1.0.1"
license = "GPL-3.0-only"
license-files = ["COPYING"]
dependencies = [
  "streamlit==1.46.1",
  "numpy>=1.18,<1.24",
  "pandas==2.3.1",
  "matplotlib==3.10.3",
  "plotly==6.2.0",
  "shapely==2.1.1",
  "Pillow==11.3.0",
  "pymoo==0.6.1.5",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
description = "EvoEuler: Evolving Euler and Venn Diagrams with Specific Properties"
authors = [
  {name = "Chi Ho Chan", email = "c.chan3@napier.ac.uk"},
  {name = "Peter Chapman", email = "p.chapman@napier.ac.uk"},
  {name = "Kevin Sim", email = "k.sim@napier.ac.uk"},
  {name = "Ben Paechter", email = "b.paechter@napier.ac.uk"},
]
maintainers = [
  {name = "Chi Ho Chan", email = "c.chan3@napier.ac.uk"}
]
keywords = ["Euler Diagrams", "Venn Diagrams", "Set Visualization", "Multi-Objective Optimization"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/superchchan/evoeuler"
Repository = "https://github.com/superchchan/evoeuler"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
evoeuler = "evoeuler.__main__:main"

[project.optional-dependencies]
dev = [
  "mypy==1.19.1",
  "ruff==0.14.10",
  "pandas-stubs==2.3.3.251219",
  "types-shapely==2.1.0.20250917",
]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
  "pymoo.*",
  "plotly.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"